Fix: Detail logo was too close to the media rating container on TVs

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -1018,7 +1018,7 @@ html {
 
 .layout-tv .detailLogo {
     height: 20vh;
-    top: 40vh;
+    top: 39vh;
     left: 30vw;
     width: 60vw;
     margin: auto 5vw;
